[Unix Admin] Add sample login-files for macOS (zsh)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Git-Ignore file _________________________________________
 
+# macOS files _____________________________________________
+.DS_Store
+
 # Visual-Studio Code ______________________________________
 .vscode/
 *.code-workspace
+
